# k-MST

./: .gitignore  Cargo.toml  README.md
Docs/: main.tex
Docs/sections/: anexo.tex  section1.tex
data/: g2.txt  g4.txt
src/: lib.rs  main.rs
src/entity/: edge.rs  graph.rs  mod.rs  tree.rs
src/utils/: config.rs  mod.rs  read_input.rs  svg_plot.rs  svg_tree_plot.rs  write_report.rs
src/woa/: mod.rs  whale.rs  woa.rs
tests/: config_tests.rs  edge_tests.rs  graph_tests.rs  read_input_tests.rs  svg_tests.rs  tests.rs  tree_tests.rs
